--- a/app.json
+++ b/app.json
@@ -26,9 +26,23 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "eas": {
+        "projectId": "7624085f-856c-4180-b500-ac108fce4252"
+      }
+    },
+    "owner": "bacholashkhia",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/7624085f-856c-4180-b500-ac108fce4252"
     }
   }
 }
